fix arrow export and update tutorial